objects/copado__Org__c.object
<CustomObject>
    <fields>
        <fullName>copado__Disable_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will not validate the org credentials when the record is saved or viewed.</inlineHelpText>
        <label>Disable Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Org Credentials</relationshipLabel>
        <relationshipName>Org_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Apex_Tests_Datetime__c</fullName>
        <label>Last Apex Tests Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Apex_Tests_Status__c</fullName>
        <label>Last Apex Tests Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Last_Git_Backup_Datetime__c</fullName>
        <label>Last Git Backup Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Git_Backup_Status__c</fullName>
        <label>Last Git Backup Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Test_Coverage__c</fullName>
        <formula>copado__Environment__r.copado__Minimum_Apex_Test_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Apex Test Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Oauth_Signature__c</fullName>
        <label>Oauth Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Org_Type__c</fullName>
        <label>Org Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production/Developer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__SFDC_Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Org ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Test_Frequency__c</fullName>
        <inlineHelpText>Continuous Integration feature. Run all Apex Test methods and save the results in  the Apex Test Result object to do email alerts or reporting. This feature is quite powerful together with the Git Backups to detect failure-changes automatically.</inlineHelpText>
        <label>Test Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Token__c</fullName>
        <inlineHelpText>A security token is an automatically generated key that you must use when connecting via the API.</inlineHelpText>
        <label>Security Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Validated_Status__c</fullName>
        <formula>IF(ISBLANK(copado__Validated_Date__c),
&quot;Error&quot; ,
 IF( DATEVALUE(copado__Validated_Date__c) == TODAY(), 
    &quot;OK&quot;,&quot;None&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated Status</label>
        <type>Text</type>
    </fields>
    <label>Org Credential</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Org_Type__c</columns>
        <columns>copado__Username__c</columns>
        <columns>copado__SFDC_Org_ID__c</columns>
        <columns>copado__Test_Frequency__c</columns>
        <columns>copado__Validated_Date__c</columns>
        <columns>copado__Validated_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Last_Git_Backup_Status__c</columns>
        <columns>copado__Last_Apex_Tests_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>